--- a/flair-with-wilfa/index.html
+++ b/flair-with-wilfa/index.html
@@ -123,7 +123,7 @@
 <p>今年の 2 月、手が滑って <a href="https://flairespresso.jp/products/flair-pro2">Flair Espresso Pro 2</a> を購入した。
 きっかけは <a href="http://www.switchcoffeetokyo.com/">SWITCH COFFEE TOKYO</a> のホットラテが好きすぎて、なんとかこれを自分で作れたりしないかな、と思ったこと。</p>
 <p>もし美味しいエスプレッソを作れさえすれば、ラテだけじゃなくこれからの暑い季節にぴったりなエスプレッソトニックも飲み放題。バニラアイスにかければ確実に優勝できる。</p>
-<p>とはいえ、自宅で美味しいエスプレッソを抽出するというのは非常にハードルが高いというのは何度も耳にしている。<a href="https://timwendelboe.no/">Tim おじさん</a> も<a href="https://www.amazon.com/Coffee-Tim-Wendelboe-WEN-BAI/dp/9866179729">著書</a>の中で、「自宅でやるよりカフェに行け、ただし俺が家で作るエスプレッソは最高だけどな！ガハハ！」みたいなこと言ってて、ハードルの高さは「必要な器具」「専用の豆」あたりに集約されると思う。</p>
+<p>とはいえ、自宅で美味しいエスプレッソを抽出するハードルの高さは何度も耳にしていて、<a href="https://timwendelboe.no/">Tim おじさん</a> も<a href="https://www.amazon.com/Coffee-Tim-Wendelboe-WEN-BAI/dp/9866179729">著書</a>の中で、「自宅でやるよりカフェに行け、ただし俺が家で作るエスプレッソは最高だけどな！ガハハ！」みたいなこと言ってる。</p>
 <p>この記事は、それでも諦めきれず、Flair なら満足いくクオリティのエスプレッソを自宅で作れそう・・・！と希望を持って、天国を味わってから地獄に落ちて、また天国を見た記録。</p>
 <span id="continue-reading"></span><h2 id="mang-siiren-xiang-kenomatome">忙しい人向けのまとめ</h2>
 <ul>
@@ -141,13 +141,13 @@
 <li>賃貸住み（100V 電源）</li>
 </ul>
 <h3 id="esupuretusomasin">エスプレッソマシン</h3>
-<p>ガチ機材と思われがちなエスプレッソマシンだけど、ちゃんと小規模店舗用とか家庭用グレードのものもあるし、電源も家庭用 100V だったり、水道直結しなくても水タンクタイプの製品もある。つまり、絶対に導入できない、というわけではないことがわかった。ただ、業務用とくらべて小さいというだけで、そこそこのサイズがあるし、実際置いたら邪魔だろうな、ってのはある。</p>
+<p>ガチ機材と思われがちなエスプレッソマシンだけど、ちゃんと小規模店舗用とか家庭用グレードのものもあるし、電源も家庭用 100V だったり、水道直結しなくても水タンクタイプの製品もある。つまり、絶対に導入できないってわけではない。ただ、業務用とくらべて小さいというだけで、そこそこのサイズがあるし、実際置いたら邪魔だろうな、ってのはある。</p>
 <h3 id="gurainda">グラインダー</h3>
 <p>エスプレッソマシンで使うコーヒーは「エスプレッソ挽き」と呼ばれる粒度の細かい挽き目設定が必要になる。
 ドリップ用よりも遥かに細かいので、普通のグラインダーだと対応していないことが多い。</p>
 <h3 id="dou">豆</h3>
 <p>エスプレッソにはドリップ用よりも深めに煎った豆を使うのが一般的で、エスプレッソブレンドとかも売っている。</p>
-<p>1 日 2 杯しか飲まなくて、ドリップにするか、エスプレッソドリンクにするか、その瞬間の気分で決めたい、となるといったい自分はどれだけの豆のストックを抱える必要があるのか？という問題がある。さらにエスプレッソ用の豆はなぜか量が多い。</p>
+<p>1 日 2〜3 杯しか飲まなくて、ドリップにするか、エスプレッソドリンクにするか、その瞬間の気分で決めたい、となるといったい自分はどれだけの豆のストックを抱える必要があるのか？という問題がある。さらにエスプレッソ用の豆はなぜか量が多い。</p>
 <h2 id="yatutemita">やってみた</h2>
 <p>以上を踏まえて Flair Espresso を導入した。設置スペースも小さくて済むし、電気も使わない。それでいて本格的なエスプレッソを作ることができる夢のような器具。</p>
 <p>豆についてもいったんエスプレッソ用を用意せず、ドリップ用の浅煎りを使うことにした。<a href="https://www.instagram.com/igniscoffee">Ignis</a> とか最近はシングルオリジンのエスプレッソを提供しているお店も出てきているから、その意味でも面白いチャレンジになる。</p>
