--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <p>今年の 2 月、手が滑って <a href="https://flairespresso.jp/products/flair-pro2">Flair Espresso Pro 2</a> を購入した。
 きっかけは <a href="http://www.switchcoffeetokyo.com/">SWITCH COFFEE TOKYO</a> のホットラテが好きすぎて、なんとかこれを自分で作れたりしないかな、と思ったこと。</p>
 <p>もし美味しいエスプレッソを作れさえすれば、ラテだけじゃなくこれからの暑い季節にぴったりなエスプレッソトニックも飲み放題。バニラアイスにかければ確実に優勝できる。</p>
-<p>とはいえ、自宅で美味しいエスプレッソを抽出するというのは非常にハードルが高いというのは何度も耳にしている。<a href="https://timwendelboe.no/">Tim おじさん</a> も<a href="https://www.amazon.com/Coffee-Tim-Wendelboe-WEN-BAI/dp/9866179729">著書</a>の中で、「自宅でやるよりカフェに行け、ただし俺が家で作るエスプレッソは最高だけどな！ガハハ！」みたいなこと言ってて、ハードルの高さは「必要な器具」「専用の豆」あたりに集約されると思う。</p>
+<p>とはいえ、自宅で美味しいエスプレッソを抽出するハードルの高さは何度も耳にしていて、<a href="https://timwendelboe.no/">Tim おじさん</a> も<a href="https://www.amazon.com/Coffee-Tim-Wendelboe-WEN-BAI/dp/9866179729">著書</a>の中で、「自宅でやるよりカフェに行け、ただし俺が家で作るエスプレッソは最高だけどな！ガハハ！」みたいなこと言ってる。</p>
 <p>この記事は、それでも諦めきれず、Flair なら満足いくクオリティのエスプレッソを自宅で作れそう・・・！と希望を持って、天国を味わってから地獄に落ちて、また天国を見た記録。</p>
 
                                     </div>
