--- a/width-of-rim-and-tire/index.html
+++ b/width-of-rim-and-tire/index.html
@@ -150,18 +150,13 @@
 <h2 id="105-ruru">105%ルール</h2>
 <p>詳しくは次の記事を読んでみてほしい。めちゃくちゃ詳しく書かれている。</p>
 <ul>
-<li>
-<p><a href="https://rbs.ta36.com/?p=42242">ホイールの空気抵抗を減らすタイヤの 105%ルールとは？ | IT 技術者ロードバイク日記</a></p>
-</li>
-<li>
-<p>タイヤ幅に対して 105% 以上のリム幅にすると drag が悪化しない</p>
-</li>
-<li>
-<p>リム高とかリム重量よりタイヤとの組み合わせが影響大きい</p>
-</li>
-<li>
-<p>リム内幅や空気圧によってタイヤ幅が変わるから実測値を使う</p>
-</li>
+<li><a href="https://rbs.ta36.com/?p=42242">ホイールの空気抵抗を減らすタイヤの 105%ルールとは？ | IT 技術者ロードバイク日記</a></li>
+</ul>
+<p>濃い記事なので検討に必要なトピックをまとめると、</p>
+<ul>
+<li>タイヤ幅に対して 105% 以上のリム幅にすると drag が悪化しない</li>
+<li>リム高とかリム重量よりタイヤとの組み合わせが影響大きい</li>
+<li>リム内幅や空気圧によってタイヤ幅が変わるから実測値を使う</li>
 </ul>
 <p>いやはや目から鱗だった。リム幅とタイヤ幅のことなんて考えたことなかった。</p>
 <p>ということで、リム選定の前に現行機材がどうなっているかを調べないと先に進めないので測定していく。</p>
