--- a/width-of-rim-and-tire/index.html
+++ b/width-of-rim-and-tire/index.html
@@ -202,6 +202,7 @@
 <p>WAKE 6560 をエアロ効果を失わずに使うには、23c のタイヤを使って 24.7mm までの膨らみに収まっていれば良いことになる。レースのときだけ 23c を使うことはできると思うけど、転がり抵抗のことを考えると 25c が有利。WAKE 6560 にすると完全にレース用って感じになる。</p>
 <h2 id="jie-lun-grit-4540">結論: GRIT 4540</h2>
 <p>最初は見た目のかっこよさで WAKE 6560 一択！って考えていたけど、エアロ効果について調べるうちにディープリムかどうかは重要ではなく、タイヤとの組み合わせが大事というのは大きな収穫だった。それに 25c タイヤが 27.8mm まで膨らんでいたのも衝撃。</p>
+<p>追記: GRIT 4540、ポチった。届くのが楽しみ！</p>
 
     </div>
 
