--- a/width-of-rim-and-tire/index.html
+++ b/width-of-rim-and-tire/index.html
@@ -184,11 +184,13 @@
 <li><a href="https://lightweight.info/en/wheels/wegweiser-evo">Lightweight Wegweiser Evo</a></li>
 <li><a href="https://hedcycling.com/products/vanquish-rc-pro-series/">HED Vanquish RC Pro RC4 + RC6</a></li>
 <li><a href="https://www.sram.com/en/zipp/models/wh-454-ntld-a1">ZIPP 454 NSW Carbon Tubeless Disc-Brake</a></li>
+<li><a href="https://www.partington.cc/products">Partington R-Series</a></li>
 </ul>
 <p>CLX 50 はエアロ性能が期待できるリムプロファイルで人気があるのも納得、という感じ。クリンチャーモデルだとリム幅 29.4mm、リム内幅は 20.4mm。とはいえ趣味でやってるので、わざわざ高いお金を払って鉄板ホイールにするかというと微妙なところ。</p>
 <p>Lightweight は性能も値段も最高と言われてるけど、エアロ性能という観点で見てみると微妙なんじゃね？と感じた。有名な <a href="https://lightweight.info/en/road-bike/wheels/meilenstein">Meilenstein</a> はリム面が完全な平面でリム幅は 24mm、<a href="https://lightweight.info/en/wheels/wegweiser-evo">Wegweiser Evo</a> はトロイダル形状ではあるもののやはりリム幅が 24mm と絶望的に狭い。リム内幅は記載なし。見た目はかっこいいけど、リムプロファイルはひと昔前って感じで、エアロ性能を考えると価格に見合ってなさそう。</p>
 <p>HED はリム幅 30mm 〜 31.3mm とかつてない広さ！さすが老舗エアロ屋。リム内幅も 21mm と文句ない。性能的には良さそうで、あとはロゴがまぁ目立つので好みは分かれそう。</p>
-<p>ZIPP はリム幅の記載がなく、リム内幅は 19mm だった。エアロにおいて重量は関係ないと言われても、やはり 1815g という重量は避けたい。</p>
+<p>ZIPP はリム幅の記載がなく（レビュー記事によると 27.8mm らしい）、リム内幅は 19mm だった。PCW の正弦波形状はこの ZIPP の SawTooth 形状に似ているってことで特許侵害で起訴されている。エアロにおいて重量は関係ないと言われても、1815g という重量はさすがに重すぎじゃないかなと思う。</p>
+<p>Partington はオーストラリアの新興ホイールメーカーで、ディスク専用で、前後合わせて 1200g （発売当初は 1150g だった？）という驚異的な軽さと、リム内部に詰め物が入っているのが特徴。ただ、リム幅は 26.5mm と控えめなので興味はありつつも、今回の目的には適してなさそう。</p>
 <p>と、候補はいろいろあるんだけど、すでに <a href="https://www.princetoncarbon.com/">Princeton CarbonWorks</a> を使ってみたいって気持ちがある。</p>
 <h2 id="princeton-carbonworks">Princeton CarbonWorks</h2>
 <p><a href="https://www.princetoncarbon.com/product/wake-6560/">WAKE 6560</a> にするか <a href="https://www.princetoncarbon.com/product/grit-4540/">GRIT 4540</a> にするかが問題だ。</p>
