Change title format

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - &#x2F;* @kuy *&#x2F;</title>
+      <title>&#x2F;* @kuy *&#x2F; - blog.endflow.net</title>
 
       
 
