--- a/disc-brake-rotors/index.html
+++ b/disc-brake-rotors/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - ディスクブレーキローターの選定</title>
+      <title>ディスクブレーキローターの選定 - blog.endflow.net</title>
 
       
 
