--- a/flex-handler/index.html
+++ b/flex-handler/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - actix-webの柔軟なリクエストハンドラの仕組み</title>
+      <title>actix-webの柔軟なリクエストハンドラの仕組み - blog.endflow.net</title>
 
       
 
