--- a/hanno-ride/index.html
+++ b/hanno-ride/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - 飯能通行止めライド</title>
+      <title>飯能通行止めライド - blog.endflow.net</title>
 
       
 
