--- a/iced-coffee-20/index.html
+++ b/iced-coffee-20/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - アイスコーヒー 2.0</title>
+      <title>アイスコーヒー 2.0 - blog.endflow.net</title>
 
       
 
