--- a/saml-proxy/index.html
+++ b/saml-proxy/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - 社内システム向けにSAML用認証プロキシをFargateで立ててVPNを撲滅する話</title>
+      <title>社内システム向けにSAML用認証プロキシをFargateで立ててVPNを撲滅する話 - blog.endflow.net</title>
 
       
 
