--- a/acot-reporter-null/index.html
+++ b/acot-reporter-null/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - acot の Reporter プラグインを作ってみる #1</title>
+      <title>acot の Reporter プラグインを作ってみる #1 - blog.endflow.net</title>
 
       
 
