--- a/bike-upgrade-202104/index.html
+++ b/bike-upgrade-202104/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - CHAPTER2 TEREのアップグレード - 2021年4月</title>
+      <title>CHAPTER2 TEREのアップグレード - 2021年4月 - blog.endflow.net</title>
 
       
 
