--- a/cores-grinder-review/index.html
+++ b/cores-grinder-review/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - Cores コーングラインダー C330</title>
+      <title>Cores コーングラインダー C330 - blog.endflow.net</title>
 
       
 
