--- a/cycling-apparel-weight/index.html
+++ b/cycling-apparel-weight/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - サイクルウェアの重量実測まとめ</title>
+      <title>サイクルウェアの重量実測まとめ - blog.endflow.net</title>
 
       
 
