--- a/delter-coffee-press/index.html
+++ b/delter-coffee-press/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - Delter Coffee Pressが最高な件について</title>
+      <title>Delter Coffee Pressが最高な件について - blog.endflow.net</title>
 
       
 
