--- a/flair-with-wilfa/index.html
+++ b/flair-with-wilfa/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - Wilfaで挽いてFlairで抽出する方法</title>
+      <title>Wilfaで挽いてFlairで抽出する方法 - blog.endflow.net</title>
 
       
 
