--- a/setup-yew-dev/index.html
+++ b/setup-yew-dev/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - Yew: Setup development environment</title>
+      <title>Yew: Setup development environment - blog.endflow.net</title>
 
       
 
