--- a/speedup-rust-build/index.html
+++ b/speedup-rust-build/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - sccacheでGitHub Actions上のRustビルドを高速化するやつ試した</title>
+      <title>sccacheでGitHub Actions上のRustビルドを高速化するやつ試した - blog.endflow.net</title>
 
       
 
