--- a/typed-basket/index.html
+++ b/typed-basket/index.html
@@ -7,7 +7,7 @@
       <!-- Enable responsiveness on mobile devices-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-      <title>blog.endflow.net - 中身を型で表現するコンテナを作ろうとした</title>
+      <title>中身を型で表現するコンテナを作ろうとした - blog.endflow.net</title>
 
       
 
