--- a/competitive-cyclist-part1/index.html
+++ b/competitive-cyclist-part1/index.html
@@ -124,22 +124,22 @@
 <p>ただ、ついに在庫ない問題が発生したので、何とか海外通販で切り抜けるべく頑張ってみようと思う。</p>
 <span id="continue-reading"></span><h2 id="enve-noearohandoru">ENVE のエアロハンドル</h2>
 <p><a href="https://www.jccerc.info/HTML/SUMMER.html">夏の筑波８耐</a>に向けてトレーニング・・・ではなく機材をアップグレードしていこうと考えた。
-富士ヒルのために軽量化を検討していたとき、ENVE のエアロハンドルは軽量ではないけどめちゃくちゃかっこいいことが判明したのでずっと気になっていたやつ。</p>
+富士ヒルのために軽量化を検討していたとき、軽量ではないからいったん保留にしていたけど、ENVE のエアロハンドルめちゃくちゃかっこいいのでずっと気になっていた。</p>
 <ul>
 <li><a href="https://www.enve.com/product/aero-handlebar/">ENVE AERO HANDLEBAR</a></li>
 <li><a href="https://www.enve.com/product/aero-stem/">ENVE AERO STEM</a></li>
 </ul>
 <p>正直、ステムとかなんでこんなに重いんだ？ってくらいの重量なんだけど、見た目のかっこよさには代えられない。
-それに、この別体タイプのエアロハンドルはステムに shim が付属していて、ハンドルをフレームのトップチューブと水平な角度に調整できる。
-CHAPTER2 TERE のヘッドチューブは 73 度なので、17 度のやつを使えば水平になる。</p>
+それに、ステムに shim が付属していているからハンドルをフレームのトップチューブと水平な角度に調整できる。
+CHAPTER2 TERE のヘッドチューブは 73 度なので、17 度の shim を使えば水平になる。</p>
 <h2 id="ru-he-wei-ding">入荷未定</h2>
 <p>というわけで <a href="https://www.limbocycling.com/">Limbo</a> に行ってサイズなどの相談をして在庫確認してもらったところ、在庫なし、入荷未定、2〜3 ヶ月待ち、とのこと。</p>
 <p>ENVE 公式サイトで在庫なしになっていたから覚悟はしていたものの、やはりダメだった。バックオーダーも可能ということだったけど、いつ来るかもわからないので、自分で入手可能か調べてみることにした。</p>
 <h2 id="he-tokaru-shou-woshi-miru">何とか入手を試みる</h2>
-<p>海外通販サイトを見てみると取り扱い自体は多いのですぐに <a href="https://www.competitivecyclist.com/">Competitive Cyclist</a> に希望サイズのハンドルとステムの在庫があった。
-Competitive Cyclist を使うのは初めてだけど、さっと調べた感じちゃんとした通販サイトのように思えたので、ここで購入することにした。</p>
-<p>ただ、Competitive Cyclist に限った話ではないものの、自転車パーツの海外通販には落とし穴があって、購入者が住んでいる国・地域ごとに各ブランドの代理店が異なるため、購入しても配送できないことがある。
-実際、今回の ENVE についても日本への配送はできないという回答をもらった（サイト内のチャットツールで質問した）。</p>
+<p>海外通販サイトを見てみると取り扱い自体は多くて、すぐに <a href="https://www.competitivecyclist.com/">Competitive Cyclist</a> なら希望サイズのハンドルとステムの在庫があることがわかった。
+Competitive Cyclist を使うのは初めてだけど、さっと調べた感じ真っ当にやっているように思えたので、ここで購入することにした。</p>
+<p>ただ、Competitive Cyclist に限った話ではないものの、自転車パーツの海外通販には落とし穴があって、購入者が住んでいる国・地域ごとに各ブランドの代理店が異なるため、契約上の制約によって購入しても配送できないことがある。
+実際、今回の ENVE についても日本への配送はできないという回答だった（サイト内のチャットツールで質問した）。</p>
 <p>だけどそれで諦めるわけにはいかない。かっこいいエアロハンドルで８耐を走りたい。なので久々に <strong>転送サービス</strong> を使うことにした。
 転送サービスは日本に直接配送してくれない通販サイトでも、いったんアメリカ国内の倉庫に配送して、それを日本に国際便で送ってもらう仕組み。</p>
 <p>もちろん、そんな手間なことをするので料金はかかる。それでも通常は入手できないものが手に入るのは面白いし、今回は在庫がない絶望的な状況なのでお金には代えられない。
@@ -156,6 +156,7 @@ NextPlus の電話番号を入力して無事注文が完了した。</p>
 <p>注文は完了したけど、転送サービスを使ってることがバレてキャンセルされないか、無事倉庫に届くのか、
 さらに日本への転送がうまくいくのか、税関は大丈夫なのか、最終的な関税・消費税はいくらなのか、などなど心配事はたくさんある。</p>
 <p>乞うご期待</p>
+<p>追記 2021/06/26: とりあえず転送サービスの倉庫に向けて発送はされた。</p>
 
     </div>
 
