--- a/competitive-cyclist-part1/index.html
+++ b/competitive-cyclist-part1/index.html
@@ -156,7 +156,9 @@ NextPlus の電話番号を入力して無事注文が完了した。</p>
 <p>注文は完了したけど、転送サービスを使ってることがバレてキャンセルされないか、無事倉庫に届くのか、
 さらに日本への転送がうまくいくのか、税関は大丈夫なのか、最終的な関税・消費税はいくらなのか、などなど心配事はたくさんある。</p>
 <p>乞うご期待</p>
-<p>追記 2021/06/26: とりあえず転送サービスの倉庫に向けて発送はされた。</p>
+<p>追記 2021/06/26: とりあえず転送サービスの倉庫に向けて発送はされた。
+追記 2021/06/27: 倉庫が違ったのか UPS と OnTrac という聞き慣れない業者に分かれて配送された。
+追記 2021/06/30: UPS の方は無事 Shipito に到着した。OnTrac の方はウェブから追跡できなくて不安。Competitive Cyclist に問い合わせたら木曜日には到着するとのこと。それどこ情報？</p>
 
     </div>
 
