--- a/width-of-rim-and-tire/index.html
+++ b/width-of-rim-and-tire/index.html
@@ -222,6 +222,7 @@
 <p>追記: GRIT 4540、ポチった。届くのが楽しみ！</p>
 <p>追記: ホイール仕様を表にしてみた</p>
 <p>追記: PCW から新作の PEAK 4550 が発売されたので追加</p>
+<p>追記: Princeton CarbonWorks の 2021/06/30 時点での出荷リードタイムは約 4 週間とのことだった。</p>
 
     </div>
 
