--- a/competitive-cyclist-part1/index.html
+++ b/competitive-cyclist-part1/index.html
@@ -158,7 +158,8 @@ NextPlus の電話番号を入力して無事注文が完了した。</p>
 <p>乞うご期待</p>
 <p>追記 2021/06/26: とりあえず転送サービスの倉庫に向けて発送はされた。
 追記 2021/06/27: 倉庫が違ったのか UPS と OnTrac という聞き慣れない業者に分かれて配送された。
-追記 2021/06/30: UPS の方は無事 Shipito に到着した。OnTrac の方はウェブから追跡できなくて不安。Competitive Cyclist に問い合わせたら木曜日には到着するとのこと。それどこ情報？</p>
+追記 2021/06/30: UPS の方は無事 Shipito に到着した。OnTrac の方はウェブから追跡できなくて不安。Competitive Cyclist に問い合わせたら木曜日には到着するとのこと。それどこ情報？
+追記 2021/07/03: OnTrac は届かなかったので再度問い合わせてみたところ、貨物がロストしている可能性が高いから同じものを再送した、との連絡。すでに届いているコンピューターマウントは返品依頼する必要がある。</p>
 
     </div>
 
