--- a/disc-brake-rotors/index.html
+++ b/disc-brake-rotors/index.html
@@ -132,6 +132,9 @@
 <tr><td align="left"><a href="https://www.sram.com">SRAM</a></td><td align="left"><a href="https://www.sram.com/en/sram/models/rt-pln-a1">Paceline Rotor</a> 160mm / CL</td><td align="right">156g</td><td align="right">$50</td></tr>
 <tr><td align="left"><a href="https://www.carbon-ti.com">Carbon-Ti</a></td><td align="left"><a href="https://www.carbon-ti.com/products/brake-disk-and-bolt-kits/x-rotor-steel-carbon-2/x-rotor-steelcarbon-2-140">X-Rotor SteelCarbon 2 140</a> 6-bolt</td><td align="right">65g</td><td align="right">€182.50</td></tr>
 <tr><td align="left"><a href="https://www.carbon-ti.com">Carbon-Ti</a></td><td align="left"><a href="https://www.carbon-ti.com/products/brake-disk-and-bolt-kits/x-rotor-steel-carbon-2/x-rotor-steelcarbon-2-160">X-Rotor SteelCarbon 2 160</a> 6-bolt</td><td align="right">77g</td><td align="right">€182.50</td></tr>
+<tr><td align="left"><a href="https://absoluteblack.cc">absoluteBLACK</a></td><td align="left"><a href="https://absoluteblack.cc/raven-sl-95g.html">Raven SL</a> 160mm / CL</td><td align="right">95g</td><td align="right">€121</td></tr>
+<tr><td align="left"><a href="https://swissstop.ch">SwissStop</a></td><td align="left"><a href="https://swissstop.ch/catalyst/family/pro/">Catalyst Pro</a> 160mm / CL</td><td align="right">?</td><td align="right">$70</td></tr>
+<tr><td align="left"><a href="https://swissstop.ch">SwissStop</a></td><td align="left"><a href="https://swissstop.ch/catalyst/family/race/">Catalyst Race</a> 160mm / CL</td><td align="right">?</td><td align="right">$82</td></tr>
 </tbody></table>
 <ul>
 <li>Centerline: 237g</li>
@@ -141,6 +144,7 @@
 <p>え、55g も違うじゃん！</p>
 <p>さらに Carbon-Ti に変えることで現状より 100g くらい軽くなる。
 唯一の懸念は 6-bolt しかないので自分でセンターロックアダプタを購入して取り付ける必要があること。</p>
+<p>追記 2021/07/17: absoluteBLACK と SwissStop を追加した。<a href="https://weightweenies.starbike.com/forum/viewtopic.php?f=3&amp;t=145230&amp;start=480">このスレッド</a>便利。</p>
 
     </div>
 
