Add upgrade post

--- a/width-of-rim-and-tire/index.html
+++ b/width-of-rim-and-tire/index.html
@@ -223,6 +223,7 @@
 <p>追記: ホイール仕様を表にしてみた</p>
 <p>追記: PCW から新作の PEAK 4550 が発売されたので追加</p>
 <p>追記: Princeton CarbonWorks の 2021/06/30 時点での出荷リードタイムは約 4 週間とのことだった。</p>
+<p>追記: GRIT 4540 が届いて取り付けました → <a href="https://blog.endflow.net/bike-upgrade-202108/">CHAPTER2 TERE のアップグレード - 2021 年 8 月</a></p>
 
     </div>
 
