--- a/bike-upgrade-202108/index.html
+++ b/bike-upgrade-202108/index.html
@@ -226,6 +226,8 @@ ENVE では「ハンドルを取られにくくなった」という改善だっ
 <p><img src="/img/bike-upgrade-202108/enve-handlebar-03.jpg" alt="ENVE AERO HANDLEBAR" /></p>
 <p>見た目も想像以上にかっこよくて大満足。先っちょは残しておいた。これを「未練」と呼ぶらしい。</p>
 <p><img src="/img/bike-upgrade-202108/enve-handlebar-02.jpg" alt="ENVE AERO HANDLEBAR" /></p>
+<h2 id="tere-zero-setback-seatpost">TERE ZERO SETBACK SEATPOST</h2>
+<p><a href="https://blog.endflow.net/cutting-carbon-seatpost/">カーボンシートポストをぶった切る</a>で書いたので省略。</p>
 <h2 id="jin-hou-noyu-ding">今後の予定</h2>
 <ul>
 <li>サドル交換
